Fixed text alignment on Admin page

--- a/app/admin/admin.module.css
+++ b/app/admin/admin.module.css
@@ -12,6 +12,10 @@
   padding-block: 2rem;
 }
 
+.p_admin {
+  text-align: left;
+}
+
 .btn_container {
   padding-block: 2rem;
 }
